# hackathon-tv5

./: Cargo.toml  Makefile  TASK_007_IMPLEMENTATION.md  docker-compose.kafka.yml  docker-compose.yml
.github/workflows/: ci-cd.yaml
.sqlx/: README.md  db.json
apps/health-dashboard/: README.md  app.js  index.html  styles.css
apps/vibecheck-ios/: VerifyML.swift
config/: prometheus.yml
crates/api/: Cargo.toml  README_CIRCUIT_BREAKER_REDIS.md
crates/api/examples/: cache_middleware_usage.rs  circuit_breaker_with_redis.rs
crates/api/src/: circuit_breaker.rs  main.rs  server.rs
crates/api/src/middleware/: cache.rs  mod.rs
crates/api/src/routes/: playback.rs
crates/api/tests/: cache_middleware_test.rs  circuit_breaker_redis_tests.rs
crates/auth/: Cargo.toml
crates/auth/src/: error.rs  handlers.rs  lib.rs  password_reset.rs  password_reset_handlers.rs  rate_limit_admin_handlers.rs  rate_limit_config.rs  server.rs  session.rs  storage.rs  token_family.rs
crates/auth/src/middleware/: README.md  auth.rs  mod.rs  rate_limit.rs  rate_limit_integration_tests.rs
crates/auth/src/oauth/: device.rs
crates/auth/tests/: device_approval_test.rs  password_reset_email_minimal_test.rs  password_reset_email_test.rs  rate_limit_config_test.rs  session_invalidation_test.rs
crates/core/: Cargo.toml
crates/core/examples/: retry_usage.rs
crates/core/src/: config.rs  health.rs  lib.rs  metrics.rs  observability.rs  retry.rs
crates/core/src/audit/: types.rs
crates/core/src/events/: mod.rs  user_activity.rs
crates/core/tests/: activity_events_test.rs  audit_logger_integration_test.rs
crates/discovery/: .env.example  Cargo.toml
crates/discovery/docs/: CACHE_QUICKSTART.md  IMPLEMENTATION_SUMMARY.md  cache.md
crates/discovery/examples/: cache_usage.rs
crates/discovery/src/: cache.rs  embedding.rs  health.rs  lib.rs  server.rs
crates/discovery/src/search/: mod.rs  ranking.rs  vector.rs
crates/discovery/src/server/: mod.rs
crates/discovery/src/server/handlers/: mod.rs  ranking.rs
crates/discovery/tests/: cache_integration_test.rs  embedding_test.rs  integration_test.rs  ranking_config_test.rs  search_cache_integration.rs
crates/ingestion/: Cargo.toml  README_QDRANT.md
crates/ingestion/examples/: qdrant_usage.rs
crates/ingestion/src/: events.rs  handlers.rs  health.rs  lib.rs  pipeline.rs  qdrant.rs  repository.rs
crates/ingestion/src/notifications/: expiration.rs  mod.rs
crates/ingestion/src/quality/: mod.rs  recalculation.rs  scorer.rs
crates/ingestion/src/webhooks/: deduplication.rs  mod.rs  processor.rs  queue.rs  receiver.rs
crates/ingestion/src/webhooks/handlers/: generic.rs  netflix.rs
crates/ingestion/tests/: expiration_api_test.rs  expiration_notification_test.rs  freshness_decay_test.rs  freshness_decay_unit_test.rs  qdrant_integration_test.rs  repository_integration_test.rs  webhook_integration_test.rs
crates/mcp-server/: Cargo.toml  QUICK_START.md  README.md
crates/mcp-server/src/: handlers.rs  lib.rs  main.rs  protocol.rs  resources.rs  tools.rs
crates/mcp-server/tests/: integration_test.rs
crates/mcp-server/tests/fixtures/: test_content.sql
crates/playback/: Cargo.toml
crates/playback/src/: deep_link.rs  events.rs  lib.rs  main.rs  session.rs
crates/playback/tests/: deep_link_integration_test.rs  integration_test.rs
crates/sona/: Cargo.toml  LORA_STORAGE_README.md
crates/sync/: Cargo.toml
crates/sync/src/: command_router.rs  lib.rs  websocket.rs
crates/sync/src/sync/: mod.rs  progress.rs  publisher.rs  queue.rs  watchlist.rs
crates/sync/tests/: offline_queue_persistence_test.rs
docker/: mcp-server.Dockerfile  playback.Dockerfile
docs/: API_DEVICE_AUTHORIZATION.md  BATCH_002_TASK-003_IMPLEMENTATION.md  BATCH_002_TASK-005_IMPLEMENTATION_SUMMARY.md  BATCH_002_TASK-007_SUMMARY.md  BATCH_002_TASK_004_SUMMARY.md  BATCH_003_CACHE_INTEGRATION_DIAGRAM.md  BATCH_003_IMPLEMENTATION.md  BATCH_003_TASK_001_IMPLEMENTATION.md  BATCH_003_TASK_003_IMPLEMENTATION.md  BATCH_003_TASK_005_IMPLEMENTATION.md  BATCH_003_TASK_006_SUMMARY.md  BATCH_003_TASK_011_COMPLETION.md  BATCH_009_GAP_ANALYSIS.md  BATCH_009_TASK_003_IMPLEMENTATION.md  BATCH_009_TASK_006_COMPLETE.md  BATCH_009_TASK_007_MCP_SERVER_IMPLEMENTATION.md  BATCH_010_ANALYSIS_FINDINGS.md  BATCH_010_ANALYSIS_REPORT.md  BATCH_010_GAP_ANALYSIS.md  BATCH_010_GAP_ANALYSIS_STRUCTURED_FINDINGS.md  BATCH_010_RESEARCH_EXECUTIVE_SUMMARY.md  BATCH_010_SPARC_IMPLEMENTATION_GAP_ANALYSIS.md  BATCH_INVENTORY_AND_BATCH_009_PLANNING.md  INFRASTRUCTURE_STATE_ANALYSIS.md  METRICS_ENDPOINT_DOCUMENTATION.md  PUBNUB_PUBLISHER_QUICK_START.md  QDRANT_INTEGRATION.md  TASK-002-WEBHOOK-INTEGRATION-IMPLEMENTATION.md  TASK-004-EMBEDDING-SERVICE.md  TASK-005-FRESHNESS-DECAY-IMPLEMENTATION.md  TASK-006-CONFIG-IMPLEMENTATION.md  TASK-009-DEEP-LINKING-IMPLEMENTATION.md  TASK-009-USER-ACTIVITY-EVENTS.md  TASK-012-EXPIRATION-NOTIFICATIONS-IMPLEMENTATION.md  TASK-012-IMPLEMENTATION.md  TASK-013-IMPLEMENTATION.md  TASK-014-SESSION-INVALIDATION-IMPLEMENTATION.md  TASK_008_DEVICE_APPROVAL_IMPLEMENTATION.md  TASK_008_IMPLEMENTATION_SUMMARY.md  TASK_010_011_IMPLEMENTATION.md  (+12 more)
docs/auth/: BATCH_003_TASK_007_SUMMARY.md  rate-limiting-guide.md  rate-limiting-integration-example.md  rate-limiting-quick-reference.md
docs/implementation/: BATCH_002_TASK_002_SUMMARY.md
examples/: health_check_integration.rs
k8s/: README.md
k8s/base/: kustomization.yaml  namespace.yaml
migrations/: 018_expiration_notifications.sql  019_experiment_metrics_compatibility.sql
plans/: ACTION_LIST.md
plans/batches/: BATCH_002_TASKS.md  BATCH_003_TASKS.md  BATCH_008_TASKS.md  BATCH_009_TASKS.md  (+1 more)
scripts/: dev-setup.sh  dev-teardown.sh  kafka-setup.sh  seed-data.sql
terraform/: .gitignore  Makefile  README.md  terraform.tfvars.example  versions.tf
tests/: Cargo.toml  E2E_AUTH_TESTS.md  health_checks_integration_test.rs  metrics_endpoint_integration_test.rs  observability_integration_test.rs
tests/src/: e2e_auth_flow_tests.rs
tools/mg-migrate/: Cargo.toml  README.md
tools/mg-migrate/src/: commands.rs  main.rs
(+112 files in other folders)
