# Media Gateway - Rust Workspace
# Production-ready AI-native entertainment discovery platform

[workspace]
members = [
    "crates/core",
    "crates/discovery",
    "crates/sona",
    "crates/sync",
    "crates/auth",
    "crates/ingestion",
    "crates/playback",
    "crates/api",
    "crates/mcp-server",
    "tests",
    "tools/mg-migrate",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.75"
authors = ["Media Gateway Team"]
license = "MIT"
repository = "https://github.com/globalbusinessadvisors/media-gateway"
homepage = "https://media-gateway.io"

[workspace.dependencies]
# HTTP & Web Frameworks
actix-web = { version = "4", features = ["macros", "rustls"] }
actix-rt = "2"
actix-cors = "0.7"

# Async runtime
tokio = { version = "1", features = ["full"] }
futures = "0.3"

# Database
sqlx = { version = "0.7", features = [
    "runtime-tokio-rustls",
    "postgres",
    "uuid",
    "chrono",
    "json",
    "migrate",
] }

# Cache & Redis
redis = { version = "0.24", features = [
    "tokio-comp",
    "connection-manager",
    "cluster",
] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"

# HTTP client
reqwest = { version = "0.11", features = [
    "json",
    "rustls-tls",
    "gzip",
    "brotli",
] }

# Identifiers
uuid = { version = "1", features = ["v4", "v5", "serde"] }

# Date/Time
chrono = { version = "0.4", features = ["serde"] }

# Observability - Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = [
    "env-filter",
    "json",
    "fmt",
] }
tracing-actix-web = "0.7"

# Observability - Metrics
opentelemetry = "0.21"
opentelemetry-otlp = "0.14"
prometheus = "0.13"

# Error handling
thiserror = "1"
anyhow = "1"

# Message queue
rdkafka = { version = "0.36", features = ["cmake-build", "ssl", "gssapi"] }

# gRPC
tonic = { version = "0.10", features = ["tls", "gzip"] }
tonic-build = "0.10"
prost = "0.12"
prost-types = "0.12"

# Security - Authentication
jsonwebtoken = "9"
bcrypt = "0.15"
argon2 = "0.5"
oauth2 = "4"

# Configuration
config = { version = "0.13", features = ["yaml", "json"] }
dotenvy = "0.15"

# Vector database
qdrant-client = { version = "1.7", features = ["serde"] }

# PubNub integration
pubnub = "0.4"

# Validation
validator = { version = "0.16", features = ["derive"] }

# Rate limiting
governor = "0.6"

# Utilities
once_cell = "1"
lazy_static = "1"
regex = "1"
url = { version = "2", features = ["serde"] }
bytes = "1"
num_cpus = "1.16"

# Cryptography
sha2 = "0.10"
hex = "0.4"

# CLI (for services that need it)
clap = { version = "4", features = ["derive", "env"] }

# Testing
mockall = "0.12"
wiremock = "0.5"
test-context = "0.1"

# Internal crates
media-gateway-core = { path = "crates/core" }

[profile.dev]
opt-level = 0
debug = true
split-debuginfo = "unpacked"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true

[profile.test]
opt-level = 1

# Faster builds in dev
[profile.dev.package."*"]
opt-level = 3
