[package]
name = "media-gateway-auth"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true

[[bin]]
name = "auth-service"
path = "src/main.rs"

[dependencies]
media-gateway-core = { workspace = true }
actix-web = { workspace = true }
actix-web-httpauth = "0.8"
actix-rt = { workspace = true }
tokio = { workspace = true }
sqlx = { workspace = true }
redis = { workspace = true }
jsonwebtoken = { workspace = true }
bcrypt = { workspace = true }
argon2 = { workspace = true }
oauth2 = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
config = { workspace = true }
dotenvy = { workspace = true }
tonic = { workspace = true }
prost = { workspace = true }
rand = "0.8"
hex = "0.4"
uuid = { workspace = true }
chrono = { workspace = true }
base64 = "0.21"
sha2 = "0.10"
futures-util = "0.3"
reqwest = { version = "0.12", features = ["json"] }
urlencoding = "2.1"
totp-rs = { version = "5.4", features = ["otpauth", "qr"] }
qrcode = "0.14"
aes-gcm = "0.10"
actix-multipart = "0.6"
async-trait = "0.1"

[dev-dependencies]
wiremock = "0.6"
mockall = "0.12"
mockito = "1.2"
