[package]
name = "media-gateway-discovery"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true

[[bin]]
name = "discovery-service"
path = "src/main.rs"

[dependencies]
media-gateway-core = { workspace = true }
actix-web = { workspace = true }
actix-rt = { workspace = true }
actix-cors = { workspace = true }
tokio = { workspace = true }
sqlx = { workspace = true }
redis = { workspace = true }
qdrant-client = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-actix-web = { workspace = true }
opentelemetry = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
config = { workspace = true }
dotenvy = { workspace = true }
tonic = { workspace = true }
prost = { workspace = true }
num_cpus = { workspace = true }
reqwest = { workspace = true, features = ["json"] }
uuid = { workspace = true, features = ["v4", "serde"] }
regex.workspace = true
sha2.workspace = true
hex.workspace = true
tantivy = "0.22"
jsonwebtoken = "9.2"

[dev-dependencies]
mockall = { workspace = true }
wiremock = { workspace = true }
