[package]
name = "media-gateway-playback"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true

[[bin]]
name = "playback-service"
path = "src/main.rs"

[dependencies]
# Internal
media-gateway-core = { workspace = true }

# HTTP
actix-web = { workspace = true }
actix-rt = { workspace = true }

# Async
tokio = { workspace = true }

# Database
sqlx = { workspace = true }
redis = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Time
chrono = { workspace = true }

# UUID
uuid = { workspace = true }

# Observability
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# Error handling
thiserror = { workspace = true }
anyhow = { workspace = true }

# Configuration
config = { workspace = true }
dotenvy = { workspace = true }

# HTTP client
reqwest = { workspace = true }

# Message queue
rdkafka = { workspace = true }

# Async traits
async-trait = "0.1"
