[package]
name = "media-gateway-sync"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true

[[bin]]
name = "sync-service"
path = "src/main.rs"

[dependencies]
media-gateway-core = { workspace = true }
actix-web = { workspace = true }
actix-rt = { workspace = true }
tokio = { workspace = true }
sqlx = { workspace = true }
redis = { workspace = true }
pubnub = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
config = { workspace = true }
dotenvy = { workspace = true }
tonic = { workspace = true }
prost = { workspace = true }
async-trait = "0.1"
uuid = { workspace = true }
chrono = { workspace = true }
futures = "0.3"
actix = "0.13"
actix-web-actors = "4.3"
parking_lot = "0.12"
reqwest = { workspace = true }
dashmap = "5.5"
rusqlite = { version = "0.30", features = ["bundled"] }
